# INTeractv1.0

./: README.md  watchdog.js
.claude/: hookify.block-dangerous-bash.local.md  hookify.block-force-push.local.md  settings.local.json
INTeract-Speckitv1.5/: QUICK-DEPLOYMENT-CHECKLIST.md  VERCEL-DEPLOYMENT-GUIDE.md
INTeract-Speckitv1.5/INTeract-COMPLETE-Spec-Kit-All-12-Documents/: 05-Data-Model-Specification.docx  09-Operations-Runbook.docx  10-Architecture-Decision-Records.docx  README.txt
INTeract-Speckitv1.5/INTeract-Complete-Spec-Kit-v1.0/: MANIFEST.txt
INTeract-Speckitv1.5/INTeract-Complete-Spec-Kit-v1.0-FINAL/: 07-Testing-Strategy-QA-Plan.docx  MANIFEST.txt
INTeract-ive-Agent/python/: pytest_output.txt  requirements.txt
INTeract-ive-Agent/typescript/: .env.example  package-lock.json  package.json  ts_test_output.txt  typecheck_output.txt
agent/: .gitignore  README.md  analyze-platform.cmd
agent/python/: pyproject.toml
agent/python/src/: __init__.py
agent/python/src/agents/: refactoring_agent.py
agent/python/src/agents/subagents/: __init__.py  diff_generator.py
agent/python/src/tools/: __init__.py  git_tools.py  refactor_tools.py
agent/python/src/types/: __init__.py
agent/typescript/: package-lock.json  package.json
docs/: COMPLETE-SPEC-KIT-SUMMARY.txt
docs/spec-kit/: 06-User-Stories-Acceptance-Criteria.docx  11-Project-Charter.docx  12-Risk-Assessment-Mitigation-Plan.docx  MANIFEST.txt
interact-main/INTeract-Complete Spec Kit/: 08-Deployment-Infrastructure-Guide.docx  README.txt  (+1 more)
platform/: CLAUDE.md  QUICKSTART.md  vercel.json
(+47 files in other folders)
