[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interact-ive-agent"
version = "1.0.0"
description = "Full-featured refactoring agent using Claude Agent SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "claude-agent-sdk>=0.1.19",
]

[project.scripts]
interact-ive-agent = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
